# ad-mice-lda

./: .gitignore  README.md  pyproject.toml  tedho_ad_mice.code-workspace
admice/: _dispose.py  dataload.py  eventlda.py  eventlda_sliding.py  ldaproj.py
human/: ComparisonResults.m  DecodingResults.m  FeatureData.m  InferenceResults.m  LdaConfig.m  TonePuffTrialData.m  build_config.m  compare_patients.m  compute_features.m  export_results.m  load_pipeline_results.m  plot_decoding_trace.m  prepare_trials.m  run_cluster_inference.m  run_decoding.m  run_lda_pipeline.m
notebooks/: 02_proto_data_load_tone_lda.python.ipynb  03_analyze_sliding_lda.ipynb  04_reproduce_ted_figures_single_timepoint.ipynb  05_new_sliding_lda_with_cell_sampling.ipynb  06_lda_projections_tone_puff.ipynb  figure_final_v0.ipynb
