[project]
name = "admice"
version = "0.1.0"
description = "Analyses for AD project with Ted"
authors = [
    { name = "Dan O'Shea", email = "dan@djoshea.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "icecream>=2.1.3",
    "scikit-learn>=1.5.1",
    "tdqm>=0.0.1",
    "ray>=2.32.0",
    "pandas>=2.2.2",
    "numba>=0.60.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.3",
]

[tool.ruff]
indent-width = 2
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["admice"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "treescope>=0.1.10",
]
